# auth0-rocket-rust-example

./: .gitignore  Cargo.toml  README.md  Rocket.toml.example  extract_public_key.sh  generate-cert.sh
src/: errors.rs  main.rs
static/css/: style.css
