[package]
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]
name = "changes"
version = "0.1.0"

[dependencies]
bincode = "*"
chrono = "*"
crypto-hash = "0.3.1"
failure = "*"
failure_derive = "*"
openssl = "*"
rand = "0.4"
reqwest = "0.8.5"
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sled = "*"
url = "1.2"

[dependencies.frank_jwt]
optional = true
version = "3"

[dependencies.jsonwebtoken]
branch = "downgrade_ring"
git = "https://github.com/anxiousmodernman/jsonwebtoken"
optional = true

[dependencies.keyz]
branch = "master"
git = "https://github.com/anxiousmodernman/keyz"

[dependencies.maud]
branch = "master"
features = ["rocket"]
git = "https://github.com/lfairy/maud.git"

[dependencies.x509-parser]
branch = "master"
git = "https://github.com/rusticata/x509-parser"

[features]
# Only the frank_jwt implementation works right now. 
default = ["frank_jwt"]
ring-crypto = ["jsonwebtoken"]
